src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsT-dhP0.5-wfsAU-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: true\ndefault window height: P0.5\nwant fullscreen: AU\ntabbed"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1239 × 688, states: [Fullscreen]

post-map configures:
size: 607 × 336, bounds: 1239 × 688, states: []
size: 607 × 336, bounds: 1239 × 688, states: [Activated]
